--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "styled-icons": "^10.45.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
